--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google</a>
        <p>or</p>
        <a href="https://ddg.gg" target="_blank">DDG</a>
+       <p>or</p>
+       <a href="page1.html">NO</a>
    </body>
 </html>
