--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
        <a href="https://ddg.gg" target="_blank">DDG</a>
        <p>or</p>
        <a href="page1.html">NO</a>
-       <a href="Cylica/hmm.html"> troll </a>
+       <a href="Cylica.html"> troll </a>
    </body>
 </html>
