--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
-
-<!-- FIRST HTML Thing ??? -->
-
 <html>
-    <title>REAL LIFE TEST</title>
+    <title>Soon</title>
    <head>???</head>
    <body>
-       <p>CHOOSE ONE !</p>
-       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google</a>
-       <p>or</p>
-       <a href="https://ddg.gg" target="_blank">DDG</a>
-       <p>or</p>
-       <a href="page1.html">NO</a>
-       <a href="Cylica.html"> troll </a>
+       <h1> SOON </h1>
    </body>
 </html>
